[package]
name = "ticky"
version = "0.1.0"
authors = ["Kenan Sulayman <kenan@sig.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocksdb = "0.14.0"
serde = { version = "1.0.115", features = ["derive"] }
chrono = "0.4.15"
bincode = "1.3.1"
