[package]
name = "ticky"
version = "0.1.0"
authors = ["Kenan Sulayman <kenan@sig.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocksdb = "0.14.0"
serde = { version = "1.0.115", features = ["derive"] }
chrono = { version = "0.4.15", features = ["serde"] }
bincode = "1.3.1"
strum = "0.19.2"
strum_macros = "0.19.2"

[[bin]]
name = "book"
